# sat-solver

./: .gitignore  CMakeLists.txt  README.md
include/: base.h  bitmap.h  cnfcontainer.h  decoder.h  encoder.h  generator.h  linkedlist.h  solver.h  sudoku.h  types.h  utils.h  varmatrix.h  vector.h
src/: DPLL.cpp  bitmap.cpp  cnfcontainer.cpp  decoder.cpp  encoder.cpp  generator.cpp  linkedlist.cpp  main.cpp  solver.cpp  sudoku.cpp  utils.cpp  varmatrix.cpp  vector.cpp
